# guitar-configurator

./: .gitignore  .gitmodules  .travis-old.yml  .travis.yml  Arduino.qml  Bindings.qml  ButtonConfigDialog.qml  CMakeLists.txt  ColorPickerDialog.qml  Configure.qml  DebugInfo.plist.in  InteractiveController.qml  KeyBinding.qml  KeyBindings.qml  KeySelect.qml  ListController.qml  Mappings.qml  MyInfo.plist  PinBinding.qml  PinBindings.qml  PinSelect.qml  Programmer.qml  README.md  Tilt.qml  Welcome.qml  appdmg.json  appveyor-old.yml  appveyor.yml  arduino_defines.cpp  ardwiino_defines.h  ardwiinolookup.cpp  ardwiinolookup.h  board.h  controllers.h  defines.js  deviceconfiguration.cpp  deviceconfiguration.h  docker.sh  generated.ts  guitar-configurator-3  (+50 more)
.github/ISSUE_TEMPLATE/: HELP-FORM.yml  REQUEST.yml  config.yml  help-form.md  help-formguitarconfigurator.md
.github/workflows/: build.yml  linux.yml  mac.yml  main.yml  release.yml  windows.yml
_includes/templates/: footer.liquid
assets/: index.html
binaries/: avrdude.conf
cmake/: FindHIDAPI.cmake  FindLibUSB.cmake
devices/: arduino.cpp  arduino.h  ardwiino.cpp  ardwiino.h  device.cpp  device.h  dfu_arduino.cpp  dfu_arduino.h  null_device.cpp  null_device.h  outdated_ardwiino.cpp  outdated_ardwiino.h  picoboot_device.cpp  picoboot_device.h  serialdevice.cpp  serialdevice.h
firmware/: ardwiino-a-micro-atmega32u4-16000000-multi.hex  ardwiino-a-micro-atmega32u4-16000000-restore.hex  ardwiino-a-micro-atmega32u4-16000000-rf.hex  ardwiino-a-micro-atmega32u4-16000000.hex  ardwiino-a-micro-atmega32u4-8000000-multi.hex  ardwiino-a-micro-atmega32u4-8000000-rf.hex  ardwiino-a-micro-atmega32u4-8000000.hex  ardwiino-a-micro-main-atmega32u4-16000000-rf.hex  ardwiino-a-micro-multi-atmega32u4-16000000.hex  ardwiino-adafruit_feather_rp2040-rp2040-multi.hex  ardwiino-adafruit_feather_rp2040-rp2040-multi.uf2  ardwiino-adafruit_feather_rp2040-rp2040-rf.hex  ardwiino-adafruit_feather_rp2040-rp2040-rf.uf2  ardwiino-adafruit_feather_rp2040-rp2040.hex  ardwiino-adafruit_feather_rp2040-rp2040.uf2  ardwiino-adafruit_itsybitsy_rp2040-rp2040-multi.hex  ardwiino-adafruit_itsybitsy_rp2040-rp2040-multi.uf2  ardwiino-adafruit_itsybitsy_rp2040-rp2040-rf.hex  ardwiino-adafruit_itsybitsy_rp2040-rp2040-rf.uf2  ardwiino-adafruit_itsybitsy_rp2040-rp2040.hex  ardwiino-adafruit_itsybitsy_rp2040-rp2040.uf2  ardwiino-adafruit_kb2040-rp2040-rf.uf2  ardwiino-adafruit_kb2040-rp2040.uf2  ardwiino-adafruit_macropad_rp2040-rp2040-rf.uf2  ardwiino-adafruit_macropad_rp2040-rp2040.uf2  ardwiino-adafruit_qtpy_rp2040-rp2040-multi.hex  ardwiino-adafruit_qtpy_rp2040-rp2040-multi.uf2  ardwiino-adafruit_qtpy_rp2040-rp2040-rf.hex  ardwiino-adafruit_qtpy_rp2040-rp2040-rf.uf2  ardwiino-adafruit_qtpy_rp2040-rp2040.hex  ardwiino-adafruit_qtpy_rp2040-rp2040.uf2  ardwiino-adafruit_trinkey_qt2040-rp2040-multi.hex  ardwiino-adafruit_trinkey_qt2040-rp2040-multi.uf2  ardwiino-adafruit_trinkey_qt2040-rp2040-rf.hex  ardwiino-adafruit_trinkey_qt2040-rp2040-rf.uf2  ardwiino-adafruit_trinkey_qt2040-rp2040.hex  ardwiino-adafruit_trinkey_qt2040-rp2040.uf2  ardwiino-arduino_nano_rp2040_connect-rp2040-multi.hex  ardwiino-arduino_nano_rp2040_connect-rp2040-multi.uf2  ardwiino-arduino_nano_rp2040_connect-rp2040-rf.hex  (+216 more)
gui/: .gitmodules  PinBindings.qml  Tilt.qml  ardwiino_defines.h  cloneheroinfo.cpp  cloneheroinfo.h  elevatepermissionsunix.cpp  elevatepermissionsunix.h  gui.pro  main.cpp  portscanner.cpp  portscanner.h  programmer.cpp  resources.qrc  update-ardwiino.sh  updatehandler.cpp  updatehandler.h
gui/firmware/: ardwiino-leonardo-atmega32u4-16000000.hex  ardwiino-leonardo-atmega32u4-8000000.hex
gui/models/: Pro_Micro.stl  threads-library-by-cuiso-v1.scad
guides/: linux.md  rf.md
hotplug/: unixhotplug.cpp  unixhotplug.h  winhotplug.cpp  winhotplug.h
images/component-generator/: export.sh  svg-objects-export.py
images/icons/: icon.icns
installer/: script.ps1
installer/config/: config.xml
libraries/dfu-programmer/: aclocal.m4
memory-reader/: main.cpp  main.h  memory-reader.pro
models/: cover-gh3-box.stl  cover-gh3.stl  gh3.scad  nunchucky.mtl  test.stl
models/gy-521/: GY-521_MPU-6050.dwg  GY-521_MPU-6050.stl  pins.stl  pins90deg.stl
policy/: install.sh  org.kde.kf5auth.example.actions  org.kde.kf5auth.example.conf  org.kde.kf5auth.example.service
qml/: ButtonConfigDialog.qml  CalibrationDialog.qml  CloneHeroDialog.qml  CloneHeroDialogColorRow.qml  ColorPickerDialog.qml  Configure.qml  DraggableItem.qml  InteractiveController.qml  KeyBinding.qml  KeySelect.qml  ListController.qml  PinBinding.qml  Programmer.qml  RangeBar.qml  Welcome.qml  defines.js  keys.js  pins.js
repository/: 2023-08-13-0823_meta.7z  Updates.xml
repository/com.microsoft.vc_redist/: 16.6.3content.7z.sha1  16.6.3meta.7z
repository/com.slproweb.openssl/: 1.1.1content.7z  1.1.1content.7z.sha1  1.1.1meta.7z
repository/net.tangentmc.drivers/: 1.0.0drivers.7z  1.0.0drivers.7z.sha1  1.0.0meta.7z
repository/net.tangentmc.guitar_configurator/: v9.4.9Qt.7z  v9.4.9Qt.7z.sha1  v9.4.9QtGraphicalEffects.7z  v9.4.9QtGraphicalEffects.7z.sha1  v9.4.9QtQml.7z  v9.4.9QtQml.7z.sha1  v9.4.9QtQuick.2.7z  v9.4.9QtQuick.2.7z.sha1  v9.4.9QtQuick.7z  v9.4.9QtQuick.7z.sha1  v9.4.9bearer.7z  v9.4.9bearer.7z.sha1  v9.4.9binaries.7z  v9.4.9binaries.7z.sha1  v9.4.9content.7z.sha1  v9.4.9firmware.7z  v9.4.9firmware.7z.sha1  v9.4.9iconengines.7z  v9.4.9iconengines.7z.sha1  v9.4.9imageformats.7z  v9.4.9imageformats.7z.sha1  v9.4.9meta.7z  v9.4.9platforms.7z  v9.4.9platforms.7z.sha1  v9.4.9qmltooling.7z  v9.4.9qmltooling.7z.sha1  v9.4.9scenegraph.7z  v9.4.9scenegraph.7z.sha1  v9.4.9styles.7z  v9.4.9styles.7z.sha1  v9.4.9translations.7z  v9.4.9translations.7z.sha1
resources/: memory-locations.json
scripts/: processStructs.js  test.js  update-ardwiino.sh
serial/: unixserialhotplug.cpp  winserialhotplug.cpp  winserialhotplug.h
src/: eeprom.ts  keymap.ts  main.ts  programmer.ts  renderer.ts
usb/: unixusb.cpp  usbdevice.h  winusb.cpp  winusb.h
usb_driver/: libusb_device.cat  libusb_device.inf
(+133 files in other folders)
